--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets imp"
+   ]
   },
   {
    "cell_type": "markdown",
