Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inlinef"
+    "%matplotlib inline\n",
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
