--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = None"
+    "X, y = make_"
    ]
   },
   {
