--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make_"
+    "X, y = make_blobs(n_samples=400, n_)"
    ]
   },
   {
