--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_means = KMeans()\n",
+    "k_means = KMeans(n_clusters)\n",
     "\n",
     "predicted_clusters = None"
    ]
