Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,9 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_means = KMeans(n_clusters=6)\n",
+    "k_means = KMeans(n_clusters=6).fit(X)\n",
     "\n",
-    "predicted_clusters = None"
+    "predicted_clusters = k_m"
    ]
   },
   {
