Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "k_means = KMeans(n_clusters=6).fit(X)\n",
     "\n",
-    "predicted_clusters = k_m"
+    "predicted_clusters = k_means.predict(X)"
    ]
   },
   {
