Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(X[:, 0], X[:, 1], c=predicted_clu, s=10)\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=predicted_clusters, s=10)\n",
     "centers = None\n"
    ]
   },
