--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "plt.scatter(X[:, 0], X[:, 1], c=predicted_clusters, s=10)\n",
-    "centers = None\n"
+    "centers = predicted_clus\n"
    ]
   },
   {
