--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,8 @@
    "outputs": [],
    "source": [
     "plt.scatter(X[:, 0], X[:, 1], c=predicted_clusters, s=10)\n",
-    "centers = predicted_clusters.cluster_centers_\n"
+    "centers = predicted_clusters.cluster_centers_\n",
+    "plt.scatter(centers[:, 0], ce[:, 1], c=predicted_clusters, s=10)\n"
    ]
   },
   {
