Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -167,8 +167,9 @@
    "outputs": [],
    "source": [
     "plt.scatter(X[:, 0], X[:, 1], c=predicted_clusters, s=10)\n",
+    "\n",
     "centers = predicted_clusters.cluster_centers_\n",
-    "plt.scatter(centers[:, 0], ce[:, 1], c=predicted_clusters, s=10)\n"
+    "plt.scatter(centers[:, 0], centers[:, 1], c='black', s=10)\n"
    ]
   },
   {
