--- a/index.ipynb
+++ b/index.ipynb
@@ -191,6 +191,7 @@
    "source": [
     "plt.scatter(X[:, 0], X[:, 1], c=predicted_clusters, s=10)\n",
     "\n",
+    "#plot centroids\n",
     "centers = k_means.cluster_centers_\n",
     "plt.scatter(centers[:, 0], centers[:, 1], c='black', s=70)\n"
    ]
