--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
     "Write your answer below this line:\n",
     "_______________________________________________________________________________\n",
     "\n",
-    "\n",
+    "Yes\n",
     "\n",
     "## Tuning Parameters\n",
     "\n",
