--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_2, y_2 = make_blobs(n_samples=400, n_features=2, centers=6, cluster_std=0.8)"
+    "X_2, y_2 = make_blobs(n_samples=400, n_features=2, centers=np.random.randint(), cluster_std=0.8)"
    ]
   },
   {
