--- a/index.ipynb
+++ b/index.ipynb
@@ -246,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_2, y_2 = make_blobs(n_samples=400, n_features=2, centers=np.random.randint(), cluster_std=0.8)"
+    "X_2, y_2 = make_blobs(n_samples=400, n_features=2, centers=np.random.randint(3,8), cluster_std=0.8)"
    ]
   },
   {
