--- a/index.ipynb
+++ b/index.ipynb
@@ -274,8 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_means_3 = None\n",
-    "k_means_4 = None\n",
+    "k_means_3 = KMeans(n_clusters=6).fit(X_2)\n",
+    "k_means_4 = KMeans(n_clusters=6).fit(X_2)\n",
     "k_means_5 = None\n",
     "k_means_6 = KMeans(n_clusters=6).fit(X_2)\n",
     "k_means_7 = None\n",
