Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrix"
+    "from sklearn.metrics import calinski_harabaz_score"
    ]
   },
   {
