--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CH_score = None\n",
+    "CH_score = []\n",
+    "for models in k\n",
     "\n"
    ]
   },
