Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,8 @@
    "outputs": [],
    "source": [
     "CH_score = []\n",
-    "for models in k\n",
+    "for models in k_list:\n",
+    "    models.labels\n",
     "\n"
    ]
   },
