Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
    "source": [
     "CH_score = []\n",
     "for models in k_list:\n",
-    "    models.labels\n",
+    "    models.labels_\n",
     "\n"
    ]
   },
