Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
    "source": [
     "CH_score = []\n",
     "for models in k_list:\n",
-    "    print(models.labels_)\n",
+    "    CH_scmodels.labels_)\n",
     "\n"
    ]
   },
