--- a/index.ipynb
+++ b/index.ipynb
@@ -323,75 +323,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 0 1 0 1 0 0 2 0 1 0 0 0 0 2 1 0 0 0 1 1 1 0 1 0 0 1 1 0 0 0 2 1 0 0 0\n",
-      " 0 1 1 1 0 1 1 0 0 0 0 0 1 0 0 1 1 1 0 0 2 1 0 0 0 0 1 0 0 2 2 2 1 2 0 1 2\n",
-      " 1 0 1 0 0 1 2 0 1 1 2 0 1 2 0 1 2 1 0 1 0 0 0 2 0 0 1 0 1 1 1 0 0 0 2 0 1\n",
-      " 0 0 2 0 0 0 0 0 2 1 2 0 2 1 1 2 0 0 0 0 2 0 2 2 1 1 0 0 1 0 1 2 0 1 0 0 0\n",
-      " 2 0 1 0 0 1 2 1 0 0 0 2 2 0 2 1 0 2 1 1 0 2 0 1 0 1 1 1 0 0 0 0 1 1 1 0 1\n",
-      " 2 2 0 2 2 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 1 0 0 1 1 1 0 0 1 0 0 0 1 1\n",
-      " 0 0 0 1 0 1 0 0 1 0 0 1 0 0 0 2 0 0 1 2 1 1 0 1 0 0 1 2 0 1 0 0 1 0 2 1 0\n",
-      " 2 1 1 0 1 1 0 1 1 1 0 0 1 0 2 0 0 2 1 2 1 0 0 2 2 0 1 1 2 1 1 1 0 1 2 1 1\n",
-      " 2 0 1 0 1 1 2 0 1 0 0 1 1 2 0 1 0 0 2 0 0 2 0 1 2 0 0 0 2 2 2 0 2 0 1 0 0\n",
-      " 1 0 1 1 1 2 0 0 1 1 0 1 1 0 1 0 2 0 0 0 1 0 1 1 0 1 2 0 0 0 1 0 2 1 0 0 0\n",
-      " 2 0 0 0 1 2 1 1 0 0 0 1 0 2 1 0 2 0 0 0 1 0 0 0 1 0 0 0 2 0]\n",
-      "[3 1 1 3 1 3 1 1 2 1 3 1 1 1 1 2 0 1 1 1 0 0 3 1 0 1 1 3 3 1 1 1 2 0 1 1 1\n",
-      " 1 3 0 0 1 0 0 1 1 1 1 1 3 1 1 3 0 0 1 1 2 3 1 1 1 1 0 1 1 2 2 2 0 2 1 3 2\n",
-      " 0 1 0 1 1 0 2 1 0 3 2 1 3 2 1 3 2 0 1 0 1 1 1 2 1 1 3 1 3 3 0 1 1 1 2 1 3\n",
-      " 1 1 2 1 1 1 1 1 2 3 2 1 2 0 0 2 1 1 1 1 2 1 2 2 0 3 1 1 3 1 0 2 1 0 1 1 1\n",
-      " 2 1 0 1 1 0 2 3 1 1 1 2 2 1 2 3 1 2 3 0 1 2 1 3 1 3 3 3 1 1 1 1 3 0 0 1 0\n",
-      " 2 2 1 2 2 3 1 3 1 1 1 1 1 1 1 1 1 1 1 1 3 3 1 3 1 1 0 0 3 1 1 0 1 1 1 3 0\n",
-      " 1 1 1 3 1 3 1 1 3 1 1 0 1 1 1 2 1 1 0 2 3 0 1 0 1 1 0 2 1 0 1 1 3 1 2 3 1\n",
-      " 2 3 0 1 0 0 1 3 3 3 1 1 3 1 2 1 1 2 0 2 0 1 1 2 2 1 3 3 2 0 0 3 1 0 2 3 3\n",
-      " 2 1 3 1 3 0 2 1 0 1 1 0 3 2 1 0 1 1 2 1 1 2 1 0 2 1 1 1 2 2 2 1 2 1 3 1 1\n",
-      " 0 1 0 3 3 2 1 1 0 0 1 3 3 1 3 1 2 1 1 1 0 1 3 0 1 3 2 1 1 1 0 1 2 0 1 1 1\n",
-      " 2 1 1 1 3 2 3 0 1 1 1 3 1 2 3 1 2 1 1 1 0 1 1 1 0 1 1 1 2 1]\n",
-      "[2 1 1 2 1 2 3 3 0 3 2 3 1 3 3 0 4 1 3 3 4 4 2 3 4 1 1 2 2 3 3 1 0 4 3 3 3\n",
-      " 3 2 4 4 3 4 4 1 3 3 3 1 2 3 3 2 4 4 1 3 0 2 3 1 3 3 4 3 1 0 0 0 4 0 3 2 0\n",
-      " 4 3 4 1 3 4 0 3 4 2 0 3 2 0 1 2 0 4 3 4 3 3 3 0 3 1 2 3 2 2 4 1 3 1 0 1 2\n",
-      " 3 3 0 1 1 3 3 3 0 2 0 3 0 4 4 0 1 3 1 3 0 3 0 0 4 2 3 3 2 1 4 0 3 4 3 1 3\n",
-      " 0 1 4 3 3 4 0 2 1 1 3 0 0 1 0 2 1 0 2 4 1 0 1 2 3 2 2 2 1 1 3 1 2 4 4 3 4\n",
-      " 0 0 1 0 0 2 1 2 3 3 1 1 1 1 1 1 3 1 3 3 2 2 3 2 3 3 4 4 2 1 3 4 1 1 3 2 4\n",
-      " 3 3 3 2 1 2 3 3 2 3 3 4 1 3 3 0 3 1 4 0 2 4 1 4 3 1 4 0 3 4 1 1 2 1 0 2 3\n",
-      " 0 2 4 1 4 4 3 2 2 2 3 3 2 3 0 3 1 0 4 0 4 1 1 0 0 1 2 2 0 4 4 2 1 4 0 2 2\n",
-      " 0 3 2 1 2 4 0 3 4 3 3 4 2 0 1 4 1 3 0 3 1 0 3 4 0 1 1 3 0 0 0 3 0 3 2 3 1\n",
-      " 4 3 4 2 2 0 3 3 4 4 1 2 2 1 2 3 0 3 3 1 4 1 2 4 1 2 0 3 1 1 4 1 0 4 3 3 1\n",
-      " 0 3 1 1 2 0 2 4 3 3 3 2 3 0 2 3 0 3 1 3 4 1 1 3 4 3 3 3 0 1]\n",
-      "[0 4 5 0 5 0 1 1 2 4 0 4 4 1 1 2 3 4 1 4 3 3 0 1 3 5 5 0 0 4 4 4 2 3 1 4 1\n",
-      " 4 0 3 3 4 3 3 5 1 4 1 4 0 1 1 0 3 3 5 1 2 0 1 5 1 1 3 1 5 2 2 2 3 2 1 0 2\n",
-      " 3 1 3 5 4 3 2 1 3 0 2 1 0 2 5 0 2 3 1 3 1 1 1 2 4 5 0 1 0 0 3 5 4 5 2 5 0\n",
-      " 4 1 2 5 5 1 4 1 2 0 2 1 2 3 3 2 4 1 5 4 2 1 2 2 3 0 1 4 0 5 3 2 1 3 1 5 1\n",
-      " 2 5 3 1 4 3 2 0 4 5 1 2 2 5 2 0 5 2 0 3 4 2 5 0 1 0 0 0 5 5 4 5 0 3 3 1 3\n",
-      " 2 2 5 2 2 0 4 0 4 1 4 5 5 4 4 5 1 4 1 1 0 0 4 0 4 1 3 3 0 5 1 3 5 5 1 0 3\n",
-      " 4 1 4 0 4 0 1 4 0 1 1 3 5 1 1 2 1 5 3 2 0 3 4 3 1 5 3 2 4 3 4 4 0 5 2 0 1\n",
-      " 2 0 3 5 3 3 1 0 0 0 4 1 0 1 2 4 5 2 3 2 3 4 5 2 2 4 0 0 2 3 3 0 5 3 2 0 0\n",
-      " 2 1 0 5 0 3 2 4 3 1 1 3 0 2 4 3 5 4 2 4 5 2 1 3 2 5 5 1 2 2 2 4 2 4 0 1 5\n",
-      " 3 4 3 0 0 2 1 4 3 3 4 0 0 5 0 1 2 1 4 5 3 4 0 3 5 0 2 1 4 5 3 4 2 0 1 1 5\n",
-      " 2 1 5 5 0 2 0 3 4 1 1 0 1 2 0 1 2 1 5 1 3 5 4 1 3 4 1 1 2 5]\n",
-      "[3 2 5 6 5 6 4 4 1 2 3 2 2 4 4 1 0 2 4 2 0 0 3 4 0 5 5 3 3 2 2 2 1 0 4 2 4\n",
-      " 2 6 0 0 2 0 0 5 4 2 4 2 6 4 4 3 0 0 5 4 1 6 4 5 4 4 0 4 5 1 1 1 0 1 4 3 1\n",
-      " 0 4 0 5 2 0 1 4 0 6 1 4 3 1 5 3 1 0 4 0 4 4 4 1 2 5 3 4 6 6 0 5 2 5 1 5 6\n",
-      " 2 4 1 5 5 4 2 4 1 6 1 4 1 0 0 1 2 4 5 2 1 4 1 1 0 3 4 2 6 5 0 1 4 0 4 5 4\n",
-      " 1 5 0 4 2 0 1 6 2 5 4 1 1 5 1 3 5 1 3 0 2 1 5 3 4 6 6 3 5 5 2 5 6 0 0 4 0\n",
-      " 1 1 5 1 1 3 2 6 2 4 2 5 5 2 2 5 4 2 4 4 3 3 2 3 2 4 0 0 3 5 4 0 5 5 4 6 0\n",
-      " 2 4 2 3 2 6 4 2 6 4 4 0 5 4 4 1 4 5 0 1 6 0 2 0 4 5 0 1 2 0 2 2 3 5 1 3 4\n",
-      " 1 3 0 5 0 0 4 6 6 3 2 4 3 4 1 2 5 1 0 1 0 2 5 1 1 2 3 3 1 0 0 6 5 0 1 3 3\n",
-      " 1 4 3 5 6 0 1 2 0 4 4 0 3 1 2 0 5 2 1 2 5 1 4 0 1 5 5 4 1 1 1 2 1 2 3 4 5\n",
-      " 0 2 0 6 3 1 4 2 0 0 2 3 3 5 3 4 1 4 2 5 0 2 3 0 5 6 1 4 2 5 0 2 1 3 4 4 5\n",
-      " 1 4 5 5 3 1 3 0 2 4 4 6 4 1 6 4 1 4 5 4 0 5 2 4 0 2 4 4 1 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "CH_score = []\n",
     "for models in k_list:\n",
-    "    CH_score.append(calinski_harabaz_score(models.labels_))\n",
+    "    CH_score.append(calinski_harabaz_score(X_2, models.labels_))\n",
     "\n"
    ]
   },
