Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,14 +323,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2469.052687657049,\n",
+       " 3101.812485421825,\n",
+       " 4048.817548834271,\n",
+       " 3705.422248512906,\n",
+       " 3413.4796956128203]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "CH_score = []\n",
     "for models in k_list:\n",
     "    CH_score.append(calinski_harabaz_score(X_2, models.labels_))\n",
-    "\n"
+    "\n",
+    "CH_score"
    ]
   },
   {
