--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
     "Write your answer below this line:\n",
     "_______________________________________________________________________________\n",
     "\n",
-    "\n",
+    "5 clusters are needed\n",
     "\n",
     "Let's end by visualizing our `X_2` dataset we created, to see what our data actually looks like.\n",
     "\n",
